# qa-auto-engineer-python-tw-project-50

./: Makefile  README.md  pyproject.toml
gendiff/package/: gendiff.py  parser.py
